# ML_Engineer_Datathon

./: .dockerignore  .flake8  .gitignore  DEPLOY_AWS.md  Dockerfile  Makefile  README(EN-US).md  README.md  TODO  deploy-to-aws.sh  docker-compose.yml  dump_files.sh  pyproject.toml  requirements.txt  run-local.sh
data/: about.md
data/challenge-webmedia-e-globo-2023/: convert_kaggle.py
deploy/: Dockerfile  docker-compose.yml
docs/api/: README.md
docs/deploy_aws/: DEPLOY_AWS.md
docs/features/: README.md
docs/predict/: predict.md
docs/storage/: README.md
docs/train/: README.md
notebooks/antonio/: teste.ipynb
notebooks/antonio/test_pp_mix/: test_generate_sugested_feats.ipynb  test_pp_mix.ipynb
notebooks/gmferratti/: eda_new.ipynb  features_noticias.ipynb  features_users.ipynb
notebooks/gmferratti/data_loader/: data_loader.ipynb
notebooks/gmferratti/eda/: features_noticias.ipynb  features_users.ipynb
notebooks/mauricio/: eda.ipynb  experiment-notebook.ipynb  move_data_to_s3.py
src/: config.py  predict.py
src/api/: app.py
src/configs/: dev.yaml  prod.yaml  staging.yaml
src/data/: README.md  data_loader.py
src/evaluation/: README.md  constants.py  evaluate_model.py  monitoring.py  pipeline.py  utils.py
src/features/: README.md  TARGET.md  config.py  constants.py  feat_selection.py  feat_settings.py  pipeline.py  pp_mix.py  pp_mix_feats.py  pp_news.py  pp_target.py  pp_users.py  schemas.py  test_pp_mix.py  utils.py
src/predict/: constants.py  pipeline.py  predict.py
src/recomendation_model/: README.md  base_model.py  constants.py  lgbm_ranker.py  mocked_model.py
src/recommendation_model/: base_model.py  lgbm_ranker.py  mocked_model.py
src/storage/: README  __init__.py  base.py  factory.py  io.py  local.py  s3.py
src/train/: README.md  constants.py  core.py  feat_selection.py  pipeline.py  train.py  utils.py
tests/api/: test_app.py
tests/data/: test_data_loader.py
tests/features/: test_pp_mix.py  test_pp_mix_compute_category_counts.py  test_pp_mix_compute_time_gap.py  test_pp_mix_generate_suggested_feats.py  test_pp_mix_preprocess_mix_feats.py  test_pp_mix_process_datetime.py  test_pp_mix_split_dataframes.py  test_pp_target_preprocess_target.py
(+12 files in other folders)
