[project]
name = "ml-engineer-datathon"
version = "0.1.0"
description = "Last FIAP datathon challenge"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "logger>=1.4",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "py-make>=0.1.2",
    "rake-nltk>=1.0.6",
    "regex>=2024.11.6",
    "scipy>=1.13.1",
    "sentence-transformers>=3.4.1",
]
