[project]
name = "ml-engineer-datathon"
version = "0.1.0"
description = "Last FIAP datathon challenge - News Recommendation System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"} 

dependencies = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "mlflow==2.20.1",
    "python-dotenv==1.0.1",
    "pandas==2.2.3",
    "numpy==2.0.2",
    "matplotlib==3.9.4",
    "seaborn==0.13.2",
    "jupyterlab==4.3.5",
    "scikit-learn==1.6.1",
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "pyyaml==6.0.2",
    "ipython==8.18.1",
    "ipykernel==6.29.5",
    "lightgbm>=4.6.0",
    "category-encoders>=2.6.4",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "flake8==7.1.1",
    "isort==6.0.0",
    "pre-commit==4.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.black]
line-length = 98
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
    notebooks/.*
    | dist/.*
    | data/.*
    | mlruns/.*
)
'''

[tool.isort]
profile = "black"
line_length = 98
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    "notebooks",
    "dist",
    "data",
    "mlruns"
]
